# inference-benchmarker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  optimum.py  parse_results.py  plot.py  pyproject.toml
.github/workflows/: build.yaml  build_ci.yaml  release.yaml  rust.yaml  rust.yml  trufflehog.yaml  trufflehog.yml
extra/dashboard/: app-dashboard.py  app.py  parse_results.py
extra/k8s/: benchmark.yaml  token.yaml
extra/k8s/inference-benchmarker/: Chart.yaml  values.yaml
extra/k8s/inference-benchmarker/templates/: _helpers.tpl  benchmark.yaml  configmap.yml  secret.yaml  service.yaml  tgi.yaml  vllm.yaml
extra/k8s/text-generation-inference-benchmark/: Chart.yaml  values.yaml
extra/k8s/text-generation-inference-benchmark/templates/: _helpers.tpl  benchmark.yaml  checks.yaml  configmap.yml  secret.yaml  service.yaml  tgi.yaml  vllm.yaml
extra/slurm/: benchmark.py  tgi.slurm  vllm.slurm
src/: app.rs  benchmark.rs  event.rs  executors.rs  flux.rs  lib.rs  load_generator.rs  main.rs  requests.rs  results.rs  scheduler.rs  table.rs  writers.rs
test_data/: chat.json
