[package]
name = "text-generation-inference-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest-eventsource = "0.6.0"
log = "0.4.22"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tokio = "1.40.0"
anyhow = "1.0.86"
tokenizers = { version = "0.20.0", features = ["http"] }
