[package]
name = "text-generation-inference-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest-eventsource = "0.6.0"
log = "0.4.22"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
tokenizers = { version = "0.20.0", features = ["http"] }
rand_distr = "0.4.3"
rand = "0.8.5"
futures-util = "0.3.30"
env_logger = "0.11.5"
trait-variant = "0.1.2"
async-trait = "0.1.82"
reqwest = { version = "0.12.7", features = ["json"] }
tokio-stream = "0.1.16"
strum_macros = "0.26.4"
clap = { version = "4.5.17", features = ["derive","env"] }
humantime = "2.1.0"
clap-verbosity-flag = "2.2.1"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
crossterm = "0.28.1"