[tool.poetry]
name = "text-generation-inference-benchmark"
version = "0.1.0"
description = ""
authors = ["Hugo Larcher <hugo.larcher@huggingface.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
scienceplots = "^2.1.1"
pandas = "^2.2.2"
opensearch-py = "^2.7.1"
boto3 = "^1.35.21"
gradio = "4.44.0"
pyarrow = "^17.0.0"
pygithub = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
